force-app/main/default/objects/Attend__c/Attend__c.object-meta.xml
<CustomObject>
    <label>Attend</label>
    <nameField>
        <label>Attend Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>