force-app/main/default/objects/Attend__c/fields/Within_Course_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Within_Course_Tenure__c</fullName>
    <formula>AND(
  NOT(ISBLANK(Contact__r.Batch__r.Start_Date__c)),
  NOT(ISBLANK(Contact__r.Batch__r.End_Date__c)),
  Date__c &gt;= Contact__r.Batch__r.Start_Date__c,
  Date__c &lt;= Contact__r.Batch__r.End_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Within Course Tenure</label>
    <type>Checkbox</type>
</CustomField>