force-app/main/default/objects/Attend__c/listViews/Course_Tenure.listView-meta.xml
<ListView>
    <fullName>Course_Tenure</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Within_Course_Tenure__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Course Tenure</label>
</ListView>